src/test/deca/context/valid/without_class/print_variable.deca
// Description:
//    Teste plusieurs types de prints
//
// Resultats:
//    Ok
//
// Historique:
//    cree le 08/01/2023
{
    int thisprotectedfloatprivate = 8;
    println(thisprotectedfloatprivate);
}